--- a/src/services.html
+++ b/src/services.html
@@ -282,7 +282,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42485850-2', 'auto');
+  ga('create', 'UA-XXXXXXXX-X', 'auto');
   ga('send', '/services');
 
 </script>
